syntax = "proto3";

package mcp.orchestrator.v1;

message EnvVar {
  string name = 1;
  string value = 2;
}

message VolumeMount {
  string pattern = 1;
  string mount_path = 2;
}

message VolumeLimit {
  string size = 1;
  optional string storage_class = 2;
}

message ResourceLimit {
  string cpu = 1;
  string memory = 2;
  optional string cpu_limit = 3;
  optional string memory_limit = 4;
  optional string ephemeral_storage = 5;
  map<string, VolumeLimit> volumes = 6;
}

enum SecretType {
  SECRET_TYPE_UNSPECIFIED = 0;
  SECRET_TYPE_OPAQUE = 1;
  SECRET_TYPE_DOCKER_CONFIG_JSON = 2;
  SECRET_TYPE_BASIC_AUTH = 3;
  SECRET_TYPE_SSH_AUTH = 4;
  SECRET_TYPE_TLS = 5;
}

enum SecretUpdateStrategy {
  SECRET_UPDATE_STRATEGY_UNSPECIFIED = 0;
  SECRET_UPDATE_STRATEGY_REPLACE = 1;
  SECRET_UPDATE_STRATEGY_MERGE = 2;
  SECRET_UPDATE_STRATEGY_PATCH = 3;
}
